<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/settingsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/pleaseRateOurAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_rate_app_title"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="240dp"
            android:layout_height="160dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/rateButtonHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/rateNowButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_selector"
                android:text="@string/rate"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/rateLaterButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_selector"
                android:text="@string/remind"
                android:textColor="@android:color/white" 
                android:textSize="12sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/thanksButton"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background_selector"
                android:text="@string/no_thanks"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/closeRateDialogButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_dialog_close" />

</RelativeLayout>